# r2d2-core

./: .cursorrules  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  R2D2.code-workspace  README.md  audit_git.txt  b4.txt  b5.txt  build.sh  build_output.txt  build_output2.txt  capture.py  capture.rs  cargo_out.txt  check.bat  check.err  check.out  check.sh  check_circadian.txt  check_cortex.txt  check_cortex2.txt  check_git.txt  check_minilm.txt  check_minilm2.txt  checkout.txt  checkout2.txt  clippy_log.txt  clippy_out.txt  clippy_workspace.txt  compiler_errors.json  cortex_check_fresh.txt  cortex_errors.json  cortex_errors2.json  d:XXXXR2D2r2d2-uitemplatesbase.html  debug_ci.sh  delete_git.rs  detect_hardware  (+56 more)
DEV_DOCS/: ARCHITECTURE.md  ATC_R2D2.md  CHIMERA_ENGINE_SPECS.md  LIVRE_BLANC.md  ROADMAP.md  SETUP_POSTGRES.md  SYNTHESE_PHASE_2.md  SYNTHESE_PHASE_3.md  architecte_doctrine.md  search_result
data/: synthetic_dataset.jsonl
datasets/: genesis_sft.jsonl
devtools/: audit_run.sh  blackboard_ingest.py  docx_to_md.py  trigger_rpc.sh
docs_dev/: SETUP_POSTGRES.md  StatusGlobal-2026-04-11.md  StatusGlobal-2026-04-12.md  TODO-2026-04-10.md  TODO-2026-04-11.md  TODO-2026-04-12.md
libs/notebooklm-rs/: Cargo.toml
libs/notebooklm-rs/notebooklm-client/: Cargo.toml
libs/notebooklm-rs/notebooklm-client/src/: actor.rs  browser_adapter.rs  lib.rs
libs/notebooklm-rs/notebooklm-client/src/endpoints/: artifacts.rs
libs/notebooklm-rs/notebooklm-core/: Cargo.toml
libs/notebooklm-rs/notebooklm-core/src/: domain.rs  errors.rs  lib.rs  ports.rs  types.rs
r2d2-adapter-candle/: Cargo.toml
r2d2-adapter-candle/src/: embedder.rs  lib.rs
r2d2-adapter-mcp/: Cargo.toml
r2d2-bitnet/: Audit-2026-04-09.md  Cargo.toml  README.md  Todo-2026-04-09.md
r2d2-bitnet/src/: attention.rs  bitlinear.rs  chimera.rs  custom_op_cuda.rs  ffn.rs  hadamard.rs  lib.rs  model.rs  moe.rs  packer.rs  quantization.rs  rmsnorm.rs  ssm.rs  ternary.rs  transformer.rs  weights.rs
r2d2-bitnet/src/training/: batch.rs  masked_loss.rs  mod.rs  optimizer.rs  ste.rs
r2d2-bitnet/tests/: chimera_integration.rs  qat_validation.rs  test_autograd_flow.rs  test_bwd_ops.rs
r2d2-blackboard/: Cargo.toml  Todo-2026-04-09.md
r2d2-blackboard/src/: actor.rs  lib.rs
r2d2-blackboard/tests/: integration_actor.rs
r2d2-bridge/: Cargo.toml
r2d2-bridge/src/: main.rs
r2d2-browser/: Cargo.toml
r2d2-browser/src/: lib.rs
r2d2-chunker/: Audit-2026-04-09.md  Cargo.toml  Todo-2026-04-09.md
r2d2-chunker/src/: audio_chunker.rs  lib.rs  strategy.rs  text_chunker.rs
r2d2-circadian/: Cargo.toml
r2d2-circadian/src/: dream.rs  firewall.rs  folding.rs  lib.rs  main.rs  sensory.rs  sys_monitor.rs
r2d2-cortex/: Cargo.toml  test_db.rs  test_gemini.rs  test_schema.js
r2d2-cortex/src/: agent.rs  catalog.rs  device_manager.rs  error.rs  lib.rs  mcp_client.rs  mcp_hub.rs  memory.rs  registry.rs  store.rs  trainer.rs  workspace.rs
r2d2-cortex/src/models/: audio_agent.rs  audio_decoder.rs  bitnet_agent.rs  chimera_agent.rs  minilm_embedder.rs  mod.rs  paradox_engine.rs  reasoning_agent.rs  vision_agent.rs  vision_agent_qwen.rs
r2d2-cortex/src/security/: vault.rs
r2d2-cortex/src/training/: daemon.rs  dataloader.rs  mod.rs
r2d2-cuda-core/: Cargo.toml  Todo-2026-04-09.md  build.rs
r2d2-forge/: Cargo.toml
r2d2-forge/src/: lib.rs
r2d2-inference-cpu/: Cargo.toml  Todo-2026-04-09.md
r2d2-inference-cpu/src/: lib.rs  simd_fallback.rs
r2d2-jsonai/: Audit-2026-04-09.md  Cargo.toml  Todo-2026-04-09.md
r2d2-jsonai/src/: lib.rs
r2d2-kernel/: Cargo.toml
r2d2-kernel/src/: lib.rs  ports.rs
r2d2-mcp/: Cargo.toml
r2d2-mcp-core/: Cargo.toml
r2d2-mcp-core/src/: ipc_pipeline.rs  lib.rs  mcp_types.rs  stdio_pipeline.rs
r2d2-mcp/src/: actuator.rs  client.rs  hitl.rs  lib.rs  main.rs  proxy.rs  registry.rs  vampire.rs
r2d2-mcp/tests/: mcp_integration.rs
r2d2-orchestrator/: Cargo.toml
r2d2-orchestrator/src/: main.rs
r2d2-paradox/: Cargo.toml
r2d2-paradox/src/: lib.rs  reflex_judge.rs
r2d2-registry/: Cargo.toml  Todo-2026-04-09.md
r2d2-registry/src/: dataset_manifest.rs  domain.rs  fetcher.rs  lib.rs  manager.rs  manifest.rs  types.rs
r2d2-registry/tests/: integration.rs
r2d2-secure-mem/: Audit-2026-04-09.md  Cargo.toml  build_log.txt  clippy.txt  clippy_out.txt  error.json  git_status.txt  r2d2-secure-mem-error.txt  test_err.json  test_out.txt
r2d2-secure-mem/r2d2-jsonai/: Cargo.toml
r2d2-secure-mem/r2d2-paradox/: Cargo.toml
r2d2-secure-mem/src/: lib.rs
r2d2-sensory/: Cargo.toml
r2d2-sensory/src/: gateway.rs  lib.rs  stimulus.rs
r2d2-surfer/: Cargo.toml
r2d2-surfer/src/: main.rs
r2d2-surfer/src/tools/: authenticate.rs
r2d2-tokenizer/: Audit-2026-04-09.md  Cargo.toml  Todo-2026-04-09.md
r2d2-tokenizer/src/: lib.rs  main.rs
r2d2-ui/: Cargo.toml  build.bat  check.sh  dump_err.rs
r2d2-ui/src/: api_inference.rs  chat_history.rs  error.rs  github_api.rs  logger.rs  main.rs  parser.rs  terminal.rs
r2d2-ui/static/: style.css
r2d2-ui/templates/: admin.html  base.html  chat.html  chat_response.html  cloud_models.html  cortex.html  dashboard.html  debate_config_modal.html  editor_model.html  forge.html  logs.html  memory.html  new_session_modal.html  sidebar_mcp.html  sidebar_memory.html  sidebar_settings.html  sidebar_store.html  sidebar_system.html  store.html  workspace_config_modal.html
r2d2-vampire/: Cargo.toml  deploy_mcp.sh
r2d2-vampire/scratch_probe/: Cargo.toml
r2d2-vampire/scratch_probe/src/: main.rs
r2d2-vampire/src/: lib.rs
r2d2-vampire/src/core/: consultant_store.rs  mod.rs
r2d2-vampire/src/tools/: expert_forge.rs  expert_manager.rs  github.rs  mod.rs  notebook_lm.rs  purge_untitled.rs  sync_notebooks.rs
r2d2-vampire/src/vampire_lord/: artifact_engine.rs  cdp_supervisor.rs  harvester.rs  mod.rs  notebook_api.rs  types.rs
r2d2-vampire/tests/: integration_notebook_api.rs  mcp_integration.rs
scripts/: ask_rustarch.js  deploy_to_antigravity.sh  forge_rustarch.js  init_db.sql  local_ci.bat  local_ci.sh  local_ci_gpu.sh  setup_wsl.sh  (+1 more)
(+81 files in other folders)
