[package]
name = "r2d2-adapter-candle"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Universal AI Connector: Candle Local Engine Adaptor"

[dependencies]
r2d2-kernel = { path = "../r2d2-kernel" }
r2d2-registry = { path = "../r2d2-registry" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
tokio = { version = "1.0", features = ["sync", "rt", "macros", "time"] }
candle-core = "0.10.2"
candle-transformers = "0.10.2"
candle-nn = "0.10.2"
hf-hub = { version = "0.4", features = ["tokio"] }
tokenizers = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
