[package]
name = "r2d2-adapter-mcp"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Universal AI Connector: MCP Distant Adaptor"

[dependencies]
r2d2-kernel = { path = "../r2d2-kernel" }
r2d2-registry = { path = "../r2d2-registry" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
tokio = { version = "1.0", features = ["sync", "rt", "macros", "time"] }
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
