[package]
name = "r2d2-bitnet"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
candle-core = "0.10.2"
candle-nn = "0.10.2"
rayon = "1.11.0"
thiserror = { workspace = true }
tracing = "0.1"
r2d2-cuda-core = { path = "../r2d2-cuda-core" }
[features]
cuda = ["r2d2-cuda-core/cuda", "candle-core/cuda", "candle-nn/cuda"]
