[package]
name = "r2d2-blackboard"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
r2d2-kernel = { version = "8.2.0", path = "../r2d2-kernel" }
r2d2-jsonai = { version = "8.2.0", path = "../r2d2-jsonai" }
r2d2-secure-mem = { version = "8.2.0", path = "../r2d2-secure-mem" }

# SQL & Vector DB
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid"] }
pgvector = { version = "0.4.1", features = ["sqlx"] }

# Utilitaires
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
tracing = "0.1.44"
anyhow = { workspace = true }
async-trait = "0.1.86"
uuid = { version = "1.23.0", features = ["v4"] }
rand = "0.8"

[dev-dependencies]
zeroize = "1.8.2"
