[package]
name = "r2d2-bridge"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
headless_chrome = { version = "1.0.12", features = ["fetch"] }
dirs = "5.0"
