[package]
name = "r2d2-browser"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Sovereign Browser Connection via host CDP relay"

[dependencies]
headless_chrome = { version = "1.0.21", features = ["fetch"] }
reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls", "json", "blocking"] }
anyhow = { workspace = true }
tracing = "0.1.44"
serde_json = "1.0"
directories = "6.0.0"
thiserror.workspace = true
