[package]
name = "r2d2-browser"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Sovereign Browser Connection via host CDP relay"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
anyhow = { workspace = true }
tracing = "0.1.44"
serde_json = "1.0"
directories = "6.0.0"
thiserror.workspace = true
futures = "0.3.32"
chromiumoxide = "0.9.1"
tokio = "1.51.1"
