[package]
name = "r2d2-circadian"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
# R2D2 Inner Ecosystem
r2d2-kernel = { path = "../r2d2-kernel" }
r2d2-blackboard = { path = "../r2d2-blackboard" }
r2d2-paradox = { path = "../r2d2-paradox" }
r2d2-jsonai = { path = "../r2d2-jsonai" }
r2d2-secure-mem = { path = "../r2d2-secure-mem" }
r2d2-cortex = { path = "../r2d2-cortex" }

# Asynchronous & Time Management
tokio = { version = "1.0", features = ["full", "time"] }

# Observation & Error Handling
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"