[package]
name = "r2d2-cortex"
version = "8.2.0"
edition = "2021"
authors = ["Architect Rusty <rusty@r2d2.network>"]
description = "Brique 5 : Bibliothèque Plug&Play des Agents IA Locaux via Candle"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["sync", "rt", "macros", "time"] }
async-trait = "0.1"

# Moteur d'Inférence Rust Pur (Candle)
candle-core = "0.8.2"
candle-transformers = "0.8.2"
candle-nn = "0.8.2"

# Inférence, Parsage et Téléchargement Automatique
hf-hub = { version = "0.4", features = ["tokio"] }
tokenizers = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation & Utilitaires & Native AI
r2d2-kernel = { path = "../r2d2-kernel" }
r2d2-secure-mem = { path = "../r2d2-secure-mem" }
r2d2-bitnet = { path = "../r2d2-bitnet" }
