[package]
name = "r2d2-cortex"
version = "8.2.0"
edition = "2021"
authors = ["Architect Rusty <rusty@r2d2.network>"]
description = "Brique 5 : Bibliothèque Plug&Play des Agents IA Locaux via Candle"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
tokio = { version = "1.0", features = ["sync", "rt", "macros", "time", "process", "io-util"] }
async-trait = "0.1"

# Moteur d'Inférence Rust Pur (Candle)
candle-core = "0.10.2"
candle-transformers = "0.10.2"
candle-nn = "0.10.2"

# Inférence, Parsage et Téléchargement Automatique
hf-hub = { version = "0.4", features = ["tokio"] }
tokenizers = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
image = "0.24"

# RAG Zero-Copy Bare-Metal
memmap2 = "0.9"
bytemuck = { version = "1.15", features = ["derive"] }
tracing-subscriber = "0.3"

# Validation & Utilitaires & Native AI
r2d2-kernel = { path = "../r2d2-kernel" }
r2d2-secure-mem = { path = "../r2d2-secure-mem" }
r2d2-bitnet = { path = "../r2d2-bitnet" }
r2d2-registry = { path = "../r2d2-registry" }
uuid = { version = "1.7", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"
toml = "0.8"
base64 = "0.21.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
axum = "0.8.8"
r2d2-chunker = { path = "../r2d2-chunker" }

[features]
cuda = ["r2d2-bitnet/cuda", "candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[[bin]]
name = "test_gemini"
path = "test_gemini.rs"
