[package]
name = "r2d2-jsonai"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = { workspace = true }
tracing = "0.1.44"
zeroize = { version = "1.8.2", features = ["derive"] }
