[package]
name = "r2d2-mcp"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
r2d2-kernel = { version = "8.2.0", path = "../r2d2-kernel" }
r2d2-jsonai = { version = "8.2.0", path = "../r2d2-jsonai" }
r2d2-paradox = { version = "8.2.0", path = "../r2d2-paradox" }
r2d2-blackboard = { version = "8.2.0", path = "../r2d2-blackboard" }
r2d2-secure-mem = { version = "8.2.0", path = "../r2d2-secure-mem" }
r2d2-cortex = { version = "8.2.0", path = "../r2d2-cortex" }
r2d2-sensory = { version = "8.2.0", path = "../r2d2-sensory" }
r2d2-chunker = { version = "8.2.0", path = "../r2d2-chunker" }
r2d2-registry = { version = "8.2.0", path = "../r2d2-registry" }

# Dépendances MCP (Serveur)
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
serde_json = "1.0"
thiserror = { workspace = true }
tracing = "0.1.44"
tracing-subscriber = "0.3.18"
anyhow = { workspace = true }
async-trait = "0.1.89"
pgvector = "0.4.1"
serde = { version = "1.0.228", features = ["derive"] }
git2 = "0.19.0"
