[package]
name = "r2d2-paradox"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
anyhow = "1.0.102"
r2d2-jsonai = { version = "8.2.0", path = "../r2d2-jsonai" }
r2d2-kernel = { version = "8.2.0", path = "../r2d2-kernel" }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"
zeroize = { version = "1.8.2", features = ["derive"] }
