[package]
name = "r2d2-paradox"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
r2d2-jsonai = { version = "8.2.0", path = "../r2d2-jsonai" }
r2d2-kernel = { version = "8.2.0", path = "../r2d2-kernel" }
serde_json = "1.0.149"
thiserror = { workspace = true }
tracing = "0.1.44"
zeroize = { version = "1.8.2", features = ["derive"] }
tokio = { version = "1.0", features = ["sync", "macros", "rt"] }
r2d2-cortex = { path = "../r2d2-cortex" }
r2d2-blackboard = { path = "../r2d2-blackboard" }
pgvector = "0.4.1"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt"] }
