[package]
name = "r2d2-registry"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "R2D2 Model Packaging (RMP) : Registre MLOps et Catalogue de Modèles"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = { workspace = true }
uuid = { version = "1.7", features = ["v4", "serde"] }
tracing = "0.1"
tokio = { version = "1.51.1", features = ["rt", "macros"] }

[dev-dependencies]
tempfile = "3.10"
