[package]
name = "r2d2-sensory"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
async-trait = "0.1.80"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1.40"
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }

# Intégrations R2D2
r2d2-kernel = { path = "../r2d2-kernel" }
r2d2-jsonai = { path = "../r2d2-jsonai" }
r2d2-cortex = { path = "../r2d2-cortex" }
