[package]
name = "r2d2-tokenizer"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokenizers = { version = "0.15", features = ["http"] }
hf-hub = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
