[package]
name = "r2d2-ui"
version = "0.1.0"
edition = "2021"
authors = ["RustyMaster <rusty@r2d2.network>"]
description = "R2D2 - Administration Console (HTMX/Axum)"
repository.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.7.5", features = ["ws", "macros"] }
tokio = { version = "1.36", features = ["full"] }
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
sysinfo = "0.30"

r2d2-cortex = { path = "../r2d2-cortex" }
r2d2-jsonai = { path = "../r2d2-jsonai" }
r2d2-mcp = { path = "../r2d2-mcp" }
r2d2-circadian = { path = "../r2d2-circadian" }
r2d2-blackboard = { path = "../r2d2-blackboard" }
r2d2-paradox = { path = "../r2d2-paradox" }
pulldown-cmark = "0.13.3"
tokio-stream = "0.1"
uuid = { version = "1.23.0", features = ["v4"] }
async-stream = "0.3.6"
dirs = "6.0.0"
tracing-core = "0.1.36"
chrono = "0.4.44"
portable-pty = "0.8.1"
futures = "0.3"
pgvector = "0.4.1"
r2d2-chunker = { version = "8.2.0", path = "../r2d2-chunker" }
