[package]
name = "r2d2-vampire"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "SuperServeur MCP et outil de Vampirisation CDP"
default-run = "server"

[dependencies]
# Aucune dépendance aux crates R2D2 internes, isolement total.
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
serde_json = "1.0"
thiserror = { workspace = true }
tracing = "0.1.44"
tracing-subscriber = "0.3.18"
anyhow = { workspace = true }
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
headless_chrome = { version = "1.0.21", features = ["fetch"] }
crossbeam-channel = "0.5.15" # often useful for headless_chrome
secrecy = "0.10.3"
reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls", "json", "blocking"] }
urlencoding = "2.1.3"
clap = { version = "4.5", features = ["derive"] }
r2d2-mcp-core = { version = "8.2.0", path = "../r2d2-mcp-core" }
r2d2-browser = { version = "8.2.0", path = "../r2d2-browser" }
rkyv = { version = "0.7", features = ["validation"] }
directories = "6.0.0"
url = "2.5.8"
