[package]
name = "r2d2-vampire"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "SuperServeur MCP et outil de Vampirisation CDP"
default-run = "server"

[features]
cdp_bridge = ["dep:chromiumoxide", "dep:r2d2-browser"]
default = ["cdp_bridge"]

[dependencies]
# Aucune dépendance aux crates R2D2 internes, isolement total.
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
serde_json = "1.0"
thiserror = { workspace = true }
tracing = "0.1.44"
tracing-subscriber = "0.3.18"
anyhow = { workspace = true }
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
secrecy = "0.10.3"
reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls", "json", "blocking"] }
urlencoding = "2.1.3"
clap = { version = "4.5", features = ["derive"] }
r2d2-mcp-core = { version = "8.2.0", path = "../r2d2-mcp-core" }
r2d2-browser = { version = "8.2.0", path = "../r2d2-browser", optional = true }
rkyv = { version = "0.7", features = ["validation"] }
directories = "6.0.0"
url = "2.5.8"
futures = "0.3.32"
chromiumoxide = { version = "0.9.1", optional = true }

[dev-dependencies]
axum = "0.7"

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["cdp_bridge"]

[[bin]]
name = "rescue"
path = "src/bin/rescue.rs"
required-features = ["cdp_bridge"]

[[bin]]
name = "test_ask"
path = "src/bin/test_ask.rs"
required-features = ["cdp_bridge"]
