[workspace]
members = [
    "notebooklm-core",
    "notebooklm-client",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full", "sync", "macros"] }
tracing = "0.1"
