[package]
name = "notebooklm-client"
version = "0.1.0"
edition = "2021"

[dependencies]
notebooklm-core = { path = "../notebooklm-core" }

anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
chromiumoxide = "0.9.1"
r2d2-browser = { path = "../../../r2d2-browser" }
html-escape = "0.2"
async-trait = "0.1"
